<resources>
    <string name="app_name">Homegram</string>
    <string name="signin_google_fail">구글 로그인 실패</string>
    <string name="signin_google_connect_fail">구글 연결 실패</string>
    <string name="home_menu_home">Home</string>
    <string name="home_menu_daily">Daily</string>
    <string name="home_menu_calendar">Calendar</string>
    <string name="home_menu_map">Map</string>
    <string name="main_menu_setting">Setting</string>
    <string name="setting_invite_link">초대 링크 공유하기</string>
    <string name="invitation_url">https://homegram.com/invite?code=%s</string>
    <string name="invitation_send_msg">매일 나와 일기를 남겨보지 않을래?\n링크를 눌러 초대장을 받아주세요.\n\n%s</string>
    <string name="invitation_chooser_msg">Invite significant other</string>
    <string name="question_display_msg">Q%s. %s</string>
    <string name="daily_detail_edit">Edit</string>
    <string name="comment_iv_Description">comment</string>
    <string name="location_notification_channel_id">locationChannel</string>
    <string name="notification_title">Location Tracking</string>
    <string name="notification_message">사용자의 위치를 트래킹 중입니다</string>
    <string name="location_notification_channel_name">locationTracking</string>
    <string name="write_todo_btn_text">작성하기</string>
    <string name="composition_btn_text">완료하기</string>
    <string name="permission_notification_denied">새로운 메세지를 확인하시려면 알림을 허용해주세요</string>
    <string name="default_notification_channel_id">Notice</string>
    <string name="default_notification_name">Homegram</string>
    <string name="notification_get_member_fail">멤버가 존재하지 않습니다.</string>
    <string name="setting_developer_text">고객 의견</string>
    <string name="setting_user_sign_out">회원 탈퇴</string>
    <string name="loading_text">잠시만 기다려주세요.</string>
    <string name="load_data_fail">데이터 로딩에 실패했습니다.</string>
    <string name="download_data_fail">데이터 다운로딩에 실패했습니다.</string>
    <string name="user_name">이름</string>
    <string name="user_birth">생일</string>
    <string name="save_btn_text">저장</string>
    <string name="signout_fail">로그아웃 실패</string>
    <string name="todo_text">할 일을 입력해주세요.</string>
    <string name="delete_todo">delete Todo</string>
    <string name="composition_hint">답변을 입력해주세요.</string>
    <string name="internet_connect_fail">인터넷 연결을 확인해주세요.</string>
    <string name="home_image">cat image</string>
    <string name="customer_opinion_link">https://docs.google.com/forms/d/e/1FAIpQLSfLSFdfiEGK1ZNFIOngjoO60X0Fpb62Ye6L8chXhRMxQWOpkQ/viewform?usp=sf_link</string>
    <!--<string name="banner_ad_unit_id">ca-app-pub-4166221499185541/2970966395</string>-->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>