<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home_menu"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home_menu_home" />
    <item
        android:id="@+id/navigation_daily_menu"
        android:icon="@drawable/ic_baseline_library_books_24"
        android:title="@string/home_menu_daily" />
    <item
        android:id="@+id/navigation_calendar_menu"
        android:icon="@drawable/ic_baseline_calendar_month_24"
        android:title="@string/home_menu_calendar" />
    <item
        android:id="@+id/navigation_map_menu"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/home_menu_map" />
</menu>